# proxmox-dns

./: Cargo.toml  flake.nix
src/: host.rs  main.rs
src/proxmox/: lxc.rs  mod.rs  ser.rs  vm.rs
src/routeros/: mod.rs
