[package]
name = "proxmox-dns"
version = "0.1.0"
edition = "2021"

[dependencies]
hickory-proto = { version = "0.24.0", features = ["serde-config"] }
hickory-server = { version = "0.24.0" }
reqwest = { version = "0.11.22", features = ["json"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = { version = "1.0.192", features = ["derive"] }
anyhow = "1.0.75"
tokio = "1.34.0"
futures = "0.3.29"
thiserror = "1.0.50"
serde_json = "1.0.108"
serde_with = "3.4.0"
serde-value = "0.7.0"
nom = "7.1.3"
macaddr = "1.0.1"
config = "0.13.4"
